fix: enforce schema metadata invariants and builder field order